Quorum3/Library/Tests/TypeChecker/Pass/ExpAssignIntObjIntObjField.quorum
class Main
    Integer i
    Integer int
    action Main
        i:SetValue(5)
        int = cast(Integer, i)
        if int:GetValue() = 5
            output "passed"
        end
    end
end