Quorum3/Library/Tests/TypeChecker/Fail/ExpAssignBooleanIntObjField.quorum
class main
    Integer i
    action Main
        boolean bool
        i:SetValue(5)
        bool = cast(boolean, i)
    end
end